# rs-split-table

./: Cargo.toml  README.md  doc-web.sh
examples/rdb/postgresql/split-by-date/: Cargo.toml  run.sh  split-by-date
examples/rdb/postgresql/split-by-date/src/: create.rs  insert.rs  lib.rs  main.rs  row.rs  row2tab.rs  source.rs  tabchk.rs
src/: lib.rs  rdb.rs  source.rs  split.rs  target.rs
src/rdb/: create.rs  insert.rs  row2tab.rs  saver.rs  simple.rs  tabchk.rs
src/rdb/simple/: row2tab.rs  tabchk.rs
src/rdb/simple/row2tab/: row2cp.rs  row2num.rs
src/rdb/simple/tabchk/: prefix.rs
src/rdb/simple/tabchk/prefix/: number.rs
