[package]
name = "split-by-date"
version = "0.1.0"
edition = "2021"

[dependencies.rs-split-table]
path = "../../../.."

[dependencies.futures]
version = "0.3.30"
default-features = false
features = [
  "std",
  "async-await",
  "executor",
]


[dependencies.tokio]
version = "1.38.0"
default-features = false
features = [
  "macros",
  "rt-multi-thread",
]

[dependencies.tokio-stream]
version = "0.1.15"
default-features = false
features = [
  "time",
]

[dependencies.tonic]
version = "0.12.0"
default-features = false
features = []

[dependencies.time]
version = "0.3.36"
default-features = false
features = [
  "std",
  "macros",
]

[dependencies.tokio-postgres]
version = "0.7.10"
default-features = false
features = [
  "runtime",
  "with-time-0_3",
]

[dependencies.deadpool-postgres]
version = "0.14.0"
default-features = false
features = [
  "rt_tokio_1",
]
